# Tarea-3

./: .gitignore  CMakeLists.txt  README.md  README_app.md  README_web.md  temp_head.txt
ConsoleApplication1/: ConsoleApplication1.sln  ConsoleApplication1.vcxproj
app/: CMakeLists.txt
app/src/: main.cpp
web/: app.js  index.html  styles.css
